Archive2/1c/9dfe3182a5737d/output
main.cpp: In function 'int main()':
main.cpp:17:72: error: no matching function for call to 'std::vector<std::unique_ptr<A> >::vector(<brace-enclosed initializer list>)'
  std::vector<std::unique_ptr<A>> v { new B, new B, new B, new B, new B };
                                                                        ^
main.cpp:17:72: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/vector:64:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/bits/stl_vector.h:401:9: note: template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:401:9: note:   template argument deduction/substitution failed:
main.cpp:17:72: note:   cannot convert '(operator new(8ul), (<statement>, ((B*)<anonymous>)))' (type 'B*') to type 'const allocator_type& {aka const std::allocator<std::unique_ptr<A> >&}'
  std::vector<std::unique_ptr<A>> v { new B, new B, new B, new B, new B };
                                                                        ^
In file included from /usr/local/include/c++/4.9.0/vector:64:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/bits/stl_vector.h:373:7: note: std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(initializer_list<value_type> __l,
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:373:7: note:   candidate expects 2 arguments, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:348:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(vector&& __rv, const allocator_type& __m)
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:348:7: note:   candidate expects 2 arguments, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:339:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(const vector& __x, const allocator_type& __a)
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:339:7: note:   candidate expects 2 arguments, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:335:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >]
       vector(vector&& __x) noexcept
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:335:7: note:   candidate expects 1 argument, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:318:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >]
       vector(const vector& __x)
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:318:7: note:   candidate expects 1 argument, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:289:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = std::unique_ptr<A>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(size_type __n, const value_type& __value,
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:289:7: note:   candidate expects 3 arguments, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:277:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(size_type __n, const allocator_type& __a = allocator_type())
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:277:7: note:   candidate expects 2 arguments, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:264:7: note: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::unique_ptr<A> >]
       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:264:7: note:   candidate expects 1 argument, 5 provided
/usr/local/include/c++/4.9.0/bits/stl_vector.h:253:7: note: std::vector<_Tp, _Alloc>::vector() [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >]
       vector()
       ^
/usr/local/include/c++/4.9.0/bits/stl_vector.h:253:7: note:   candidate expects 0 arguments, 5 provided
main.cpp:18:35: error: use of 'it' before deduction of 'auto'
  while(auto it = std::begin(v) && it != std::end(v))
                                   ^
